--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -39,6 +39,17 @@ body {
 	background-color: #eaece5;
 }
 
+.carousel {
+	overflow: hidden;
+}
+
+.carousel-inner {
+	overflow: visible;
+	margin: 0 auto;
+	width: 100%;
+	height: 100%;
+}
+
 .carousel-inner img {
 	width: 100%;
 	height: 100%;
@@ -83,6 +94,7 @@ body {
 }
 
 .small-logo {
+	filter: brightness(0.5) invert(1);
 	width: 15%;
 	height: 15%;
 	padding: 10px;
@@ -149,6 +161,7 @@ body {
 
 #slides {
 	padding: 20px;
+	position: relative;
 }
 
 /*Media Queries*/
@@ -167,4 +180,3 @@ body {
 		background-image: none;
 	}	
 }
-
