--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -43,15 +43,20 @@ div .row.padding {
 	background-color: #F6F7FB;
 }
 
-.carousel {
-	overflow: hidden;
-}
-
-.carousel-inner {
-	overflow: visible;
+.carousel-inner .carousel-item{
 	margin: 0 auto;
 	width: 100%;
 	height: 100%;
+}
+
+.carousel .next {
+  top: 40px;
+  padding-left: 160px;
+}
+
+.carousel .prev {
+  top: 40px;  
+  padding-left: 160px;  
 }
 
 .carousel-inner img {
@@ -83,6 +88,41 @@ div .row.padding {
 	text-shadow: 1px 1px 10px #000;
 	padding-bottom: 2rem;
 }
+
+/*carousel fade transition*/
+
+html, 
+body, 
+.carousel, 
+.carousel-inner, 
+.carousel-inner .carousel-item {
+    height: 100%;
+}
+
+.carousel-fade .carousel-inner .carousel-item {
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+.carousel-fade .carousel-inner .carousel-item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  opacity: 0;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+
+/*carousel fade transition end*/
 
 .btn-primary {
 	background-color: #6648b1;
