--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Kalam|Play&display=swap');
+
 body {
 	background-color: #F6F7FB;
+	font-family: 'Play', sans-serif;
+	font-family: 'Kalam', cursive;
+}
+
+body h1,h2,h3,h4,p,a {
+	font-family: 'Kalam', cursive;
+}
+
+body p {
+	font-size: 16px;
 }
 
 div .row.padding {
@@ -29,6 +41,10 @@ div .row.padding {
 
 .navbar {
 	padding: .8rem;
+	position: fixed;
+    width: 100%;
+    top: 0;
+    box-shadow: 5px 10px 10px #888888;
 }
 
 .navbar-nav {
@@ -261,6 +277,7 @@ body,
 	padding: 30px;
 	padding-bottom: 0px;
 	margin: 0px;
+
 }
 
 #first-cont {
@@ -390,9 +407,10 @@ body,
 }
 
 #pic-div {
-  background-image: url("https://cdn.pixabay.com/photo/2016/11/14/03/21/fireworks-1822479_1280.jpg");
-  border-radius: 5px;
-  background-position: center;
+  	background-image: url("https://cdn.pixabay.com/photo/2016/11/14/03/21/fireworks-1822479_1280.jpg");
+  	border-radius: 5px;
+  	background-position: center;
+  	padding:50px;
 }
 
 .row-d .small-logo {
@@ -420,11 +438,199 @@ body,
 	box-shadow: 5px 10px 18px #888888;
 }
 
+#logo-header {
+	color: black;
+}
+
+#logo-footer {
+	width: 6em;
+	height: 3.5em;
+	user-drag: none; 
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+}
+
+#img3d {
+	text-align: center;
+	width: 20em;
+	height: 20em;
+	user-drag: none; 
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-drag: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+}
+
+/*Link list decoration*/
+.underline {
+  display: inline;
+  position: relative;
+  overflow: hidden;
+}
+.underline:after {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  right: 0;
+  width: 0;
+  bottom: -5px;
+  background: #FE8745;
+  height: 4px;
+  transition-property: width;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+.underline:hover:after,
+.underline:focus:after,
+.underline:active:after {
+  left: 0;
+  right: auto;
+  width: 100%;
+}
+/*end decoration*/
+
 .container-n {
 	padding: 10px;
 	text-align: center;
 	color: white;
 }
+
+* {
+    box-sizing: border-box;
+    font-family: ’Lato’, sans-serif;
+    margin: 0; 
+    padding: 0;
+}
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+footer {
+    background-color: #F6F7FB;
+    color: #bbb;
+    line-height: 1.5;
+    padding-top: 4em;
+}
+
+footer a {
+    text-decoration: none;
+    color: #eee;
+}
+a:hover {
+    text-decoration: underline;
+}
+
+.ft-title {
+    color: black;
+    font-family: ’Merriweather’, serif;
+    font-size: 1.375rem;
+    padding-bottom: 0.625rem;
+}
+
+.container {
+    flex: 1;
+}
+
+.ft-main {
+    padding: 1.25rem 1.875rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+.ft-main-item {
+    padding: 1.25rem;
+    min-width: 12.5rem;
+}
+
+.ft-social {
+    padding: 0 1.875rem 1.25rem;
+}
+.ft-social-list {
+    display: flex;
+    justify-content: center;
+    border-top: 1px #777 solid; 
+    padding-top: 1.25rem;
+}
+
+.ft-social-list li {
+    margin: 0.5rem;
+    font-size: 1.25rem;
+}
+
+.ft-legal {
+    padding: 0.9375rem 1.875rem;
+    background-color: #F6F7FB;
+}
+
+.ft-legal-list {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    color: gray;
+}
+.ft-legal-list li {
+    margin: 0.125rem 0.625rem;
+    white-space: nowrap;
+}
+
+.ft-legal-list li:nth-last-child(2) {
+    flex: 1;
+}
+
+.fab {
+	background-color: white;
+	padding: 20px;
+	border-radius: 5px;
+	box-shadow: 5px 10px 18px #888888;
+	width: 3em;
+	height: 3em;
+	color: black;
+}
+
+.fab:hover {
+	border-radius: 25px;
+	padding: 25px;
+	width: 3em;
+}
+
+#donate-now {
+	background-color: black;
+}
+
+#footer {
+	color: gray;
+}
+
+@media only screen and (min-width: 29.8125rem /*477px*/) {
+    .ft-main {
+        justify-content: space-around;
+    }
+}
+@media only screen and (min-width: 77.5rem /*1240px*/ ) {
+    .ft-main {
+        justify-content: space-evenly;
+    }
+}
+
+/*Footer end*/
+
+/*Loading*/
+
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(https://flevix.com/wp-content/uploads/2019/07/Ring-Preloader.gif) center no-repeat #fff;
+}
+/*Loading End*/
 
 /*Media Queries*/
 @media (max-width: 992px){
@@ -434,11 +640,23 @@ body,
 	height: 10%;
 	padding: 10px;
 	}
+
+	#imgdon {
+	padding: 10px;
+	padding-bottom: 0px;
+	margin: 0px;
+	}
 }
 
 @media (max-width: 768px){
 	#wrapper {
 		background-image: none;
+	}
+
+	#imgdon {
+	padding: 10px;
+	padding-bottom: 0px;
+	margin: 0px;
 	}
 
 	.small-logo {
@@ -460,6 +678,12 @@ body,
 @media (max-width: 576px){
 	#wrapper {
 		background-image: none;
+	}
+
+	#imgdon {
+	padding: 10px;
+	padding-bottom: 0px;
+	margin: 0px;
 	}
 
 	.small-logo {
